# ChatContextExtractor

./: README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  db.py  deps.py  llm.py  models.py  profile_service.py  rag.py  schemas.py  sgrops.py
docker/: Dockerfile
tests/: test_extract.py  test_profile_service.py
