[project]
name = "chatcontextextractor"
version = "0.1.0"
description = ""
authors = [
    {name = "MordXD",email = "kotkinegor78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "orjson>=3.9.10",
    "pydantic>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
